Fixed uneven current weather cards

--- a/src/app/weather-current/weather-current.component.scss
+++ b/src/app/weather-current/weather-current.component.scss
@@ -1,6 +1,5 @@
 .sky-canvas {
     float: right;
-
 }
 
 @media screen and (min-width: 576px) {
@@ -57,20 +56,17 @@
     &__list {
         margin-top: 0;
         padding:0;
-    }
-}
-
-@media screen and (min-width: 480px) {
-    .temp__list {
-        margin-top: 1rem !important;
+        height: 100%;
     }
 }
 
 .ul {
+    background-color: rgba(98, 171, 219, 0.1);
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
     width: 100%;
+    height: 100%;
 }
 
 .ul>.li {
@@ -78,11 +74,13 @@
     width: 100%;
 
     &:nth-child(even) {
-        background-color: lighten(rgba(176, 11, 19, 0.1), 10);
+        background-color: #fce6e7;
+        // lighten(rgba(176, 11, 19, 0.1), 10);
     }
 
     &:nth-child(odd) {
-        background-color: rgba(98, 171, 219, 0.1);
+        background-color: #eff7fc;
+        // rgba(98, 171, 219, 0.1);
     }
 }
 
